# fast_api_learning

./: .gitignore  database.py  main.py  pyproject.toml
