[tool.poetry]
name = "fast-api-post"
version = "0.1.0"
description = ""
authors = ["Beknazar Abdyldaev <abdyldaev.duff@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_post"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
